-Used Atom-beautifier (and my own discression) to clean up much of the javascript code

--- a/app/assets/stylesheets/pages_background.scss
+++ b/app/assets/stylesheets/pages_background.scss
@@ -23,6 +23,7 @@ $main-color: #EAEEF2;
 }
 
 .validation-content{
+  height: 400px;
   padding-top: 50px;
   @media screen and (max-width: 640px){
     padding-top: 20px;
@@ -67,5 +68,5 @@ $main-color: #EAEEF2;
   background: #f7761f;
   font-size: 0.70em;
   font-weight: bold;
-  
+
 }
