--- a/app/assets/stylesheets/searchpage.scss
+++ b/app/assets/stylesheets/searchpage.scss
@@ -26,6 +26,12 @@
 }
 
 
+
+.callout-validation{
+  transform: scale(0.80) translateY(-90px);
+
+}
+
 .card-body-user{
   overflow-y: scroll;
   height: 120px;
