--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <div class="grid-x align-center">
       <div class="cell small-8 ">
         <h2 class="text-center cell">Sign up</h2>
-        <div class="callout">
+        <div class="callout callout-validation">
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
           <div class="field">
@@ -16,41 +16,42 @@
           </div>
 
           <div class="field">
-            <%= f.label :first_name %><br />
+            <%= f.label :first_name %><br/>
             <%= f.text_field :first_name%>
           </div>
 
           <div class="field">
-            <%= f.label :last_name %><br />
+            <%= f.label :last_name %><br/>
             <%= f.text_field :last_name, autocomplete: "last_name"%>
           </div>
 
           <div class="field">
-            <%= f.label :email %><br />
+            <%= f.label :email %><br/>
             <%= f.email_field :email, autocomplete: :on %>
           </div>
 
           <div class="field">
             <%= f.label :password %>
             <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
-            <% end %><br />
+              <em>(<%= @minimum_password_length %>
+                characters minimum)</em>
+            <% end %><br/>
             <%= f.password_field :password, autocomplete: :on %>
           </div>
 
           <div class="field">
-            <%= f.label :password_confirmation %><br />
+            <%= f.label :password_confirmation %><br/>
             <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
           </div>
 
           <div class="actions">
             <%= f.submit "Sign up" %>
           </div>
-          <% end %>
-        </div>
+        <% end %>
       </div>
     </div>
   </div>
+</div>
 
 </div>
 
