Added additional css to aling the height of the description boxes for the user cards

--- a/app/assets/stylesheets/customercard.scss
+++ b/app/assets/stylesheets/customercard.scss
@@ -30,7 +30,7 @@
   overflow-x: hidden;
   overflow-y: hidden;
   border-bottom: solid 1px #cbd6e2;
-
+  word-wrap: break-word;
 }
 
 .card-tag{
@@ -41,7 +41,7 @@
 }
 
 .status-tag{
-
+  word-wrap: break-word;
   display: table-cell;
   vertical-align: middle;
   margin: 0 auto;
