--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require foundation_and_overrides
  *= require animate
  *= require font-awesome
+ *= require foundation_customization
  *= require_tree .
  *= require_self
 
