--- a/app/views/layouts/_topbar_normal.html.erb
+++ b/app/views/layouts/_topbar_normal.html.erb
@@ -1,4 +1,4 @@
-<div class="top-bar row columns sticky" data-sticky data-margin-top="0" id="mobile-menu">
+<div class="top-bar no-js row columns sticky" data-sticky data-margin-top="0" id="mobile-menu">
   <div class="top-bar-left" data-dropdown-menu>
     <ul class="vertical menu medium-horizontal" data-dropdown-menu>
       <li  class="menu-text"> <%= link_to image_tag("logo.png", width:"150"), root_path %> </li>
